[package]
name = "astral"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.33.0", features = ["full"] }
warp = "0.3.6"
